# music_dfm

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: config.yaml
configs/ablation/: graph_kernel_on_harm_pitch.yaml  no_edit_ops.yaml  split_pitch_token.yaml
configs/data/: pop909.yaml
configs/diffusion/: graph_kernel.yaml  mixture.yaml
configs/eval/: default.yaml
configs/model/: early_sum.yaml  fsntg_velocity.yaml  late_fusion.yaml  progress_like.yaml
configs/preprocess/: pop909.yaml
configs/train/: baseline.yaml  default.yaml  editflow.yaml  late_fusion.yaml  posterior.yaml  progress_like.yaml
docs/: design_note.md  migration.md  setup.md
examples/: quickstart.sh
music_graph_dfm/: __init__.py  train_runner.py
music_graph_dfm/data/: dataset.py  fsntg.py  pitch_codec.py  tensor_codec.py
music_graph_dfm/diffusion/: edit_ops.py  losses.py  paths.py  schedules.py  state_ops.py
music_graph_dfm/eval/: metrics.py
music_graph_dfm/guidance/: energy_guidance.py
music_graph_dfm/models/: flat_note_baseline.py  hetero_fsntg_transformer.py
music_graph_dfm/preprocess/: chords.py  pop909_pipeline.py  section_labels.py
music_graph_dfm/samplers/: ctmc_sampler.py
music_graph_dfm/templates/: rhythm_templates.py
music_graph_dfm/utils/: constants.py  io.py  midi.py  random.py  training.py
music_graph_dfm/viz/: graph_viz.py  pianoroll_viz.py
scripts/: compare_fsntg_vs_flat.py  download_pop909.py  eval.py  eval_fsntg.py  preprocess.py  preprocess_fsntg.py  print_template_vocab_stats.py  sample.py  sample_graph.py  sample_whole_song.py  train.py  train_editflow.py  train_fsntg_dfm.py  train_fsntg_editflow.py  visualize.py  visualize_training_example.py
src/music_graph_dfm.egg-info/: PKG-INFO  SOURCES.txt  (+3 more)
tests/: test_aux_graph.py  test_checkpoint_metadata.py  test_cli_smoke.py  test_ctmc_sampler.py  test_ctmc_validity.py  test_edit_ops.py  test_editflow.py  test_graph_kernel_sanity.py  test_graph_kernel_target_rate.py  test_host_projection.py  test_masked_loss.py  test_model_forward.py  test_music_losses.py  test_pitch_codec.py  test_roundtrip.py  test_scripts_smoke.py  test_state_roundtrip.py  test_template_codec.py  test_train_smoke.py  test_whole_song_stitching.py
(+53 files in other folders)
