[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "music-graph-dfm"
version = "0.2.0"
description = "Graph-based discrete flow matching and edit-flow for symbolic music generation"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "music_graph_dfm contributors"}]
dependencies = [
  "torch>=2.2",
  "numpy>=1.24",
  "pyyaml>=6.0",
  "tqdm>=4.66",
  "miditoolkit>=1.0",
  "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "mypy>=1.10",
]

[project.scripts]
music-graph-dfm = "music_graph_dfm.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["music_graph_dfm*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E203"]
